--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -56,6 +56,12 @@
         tools:layout="@layout/fragment_settings" />
 
     <fragment
+        android:id="@+id/shopFragment"
+        android:name="com.example.akthosidle.ui.shop.ShopFragment"
+        android:label="Shop"
+        tools:layout="@layout/fragment_shop"/>
+
+    <fragment
         android:id="@+id/buyGoldFragment"
         android:name="com.example.akthosidle.ui.store.BuyGoldFragment"
         android:label="@string/buy_gold_title"
