--- a/app/src/main/res/layout/fragment_basecamp.xml
+++ b/app/src/main/res/layout/fragment_basecamp.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/basecampRoot"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="12dp">
+    android:padding="8dp">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvBasecamp"
+        android:id="@+id/recyclerBasecamp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:clipToPadding="false"
-        android:padding="4dp"/>
+        android:paddingBottom="8dp"/>
 </FrameLayout>
