--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -81,7 +81,7 @@
 
     <fragment
         android:id="@+id/bankFragment"
-        android:name="com.example.akthosidle.ui.bankFragment"
+        android:name="com.example.akthosidle.ui.stashFragment"
         android:label="Bank"
         tools:layout="@layout/fragment_bank" />
 
