--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -5,7 +5,7 @@
     android:id="@+id/fragment_container_create_account"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CreateAccountActivity">
+    tools:context=".ui.auth.CreateAccountFragment">
 
     <!-- The CreateAccountFragment will be programmatically added here -->
 
